phone version added

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 				Challenge by
 				<a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
 					>Frontend Mentor</a
-				>. Coded by <a href="#">Your Name Here</a>.
+				>. Coded by <a href="#">Ngoy Banza</a>.
 			</p>
 		</footer>
 	</body>
